fixed image resizing/stretching issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
 
+/*SHIT CHAD WROTE*/
+#home-projects img {
+  width: 100%;
+  height: 100%;
+}
+
+/*end of shit chat wrote*/
+
 .bgimage {
     background-position: center center;
     background-size: cover;
@@ -25,10 +33,10 @@
 
 .navLinkIcon + .tooltip > .tooltip-inner {
 
-	color:#D42364; 
-      background-color: white;  
+	color:#D42364;
+      background-color: white;
       padding: 5px;
-      font-family: "DIN", sans-serif; 
+      font-family: "DIN", sans-serif;
       font-size: 1.2em;
       border-radius:0;
       font-weight:900;
@@ -255,7 +263,3 @@ a:hover {
 #filterTag:hover {
 	color:#D42364;
 }
-
-
-
-
